--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "kr"
+locale                   : "en-US"
 title                    : "뱀파 블로그"
 title_separator          : "-"
 subtitle                 : "뱀파의 깃허브 블로그"
